<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="627dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="Primera Formativa"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#4B4EDC"
        android:textColorHighlight="#E91E63"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="262dp"
        android:layout_marginBottom="589dp"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/usuario"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtusuario"
        android:layout_width="291dp"
        android:layout_height="54dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.615" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="444dp"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/contrasena"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/edtpassword"
        android:layout_width="292dp"
        android:layout_height="68dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="352dp"
        android:drawableRight="@drawable/baseline_visibility_off_24"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:longClickable="false"
        android:paddingRight="10dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/chaceptoterminos"
        android:layout_width="208dp"
        android:layout_height="46dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="435dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="250dp"
        android:drawableRight="@drawable/baseline_report_24"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/aceptar_terminos"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btningresar"
        android:layout_width="127dp"
        android:layout_height="70dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="510dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="151dp"
        android:enabled="false"
        android:fontFamily="@font/andika_new_basic"
        android:shadowColor="#000000"
        android:text="@string/botoningreso"
        android:textColor="#000000"
        android:textSize="14sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btncancelar"
        android:layout_width="145dp"
        android:layout_height="71dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="604dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="#3F51B5"
        android:fontFamily="@font/andika_new_basic"
        android:shadowColor="#000000"
        android:text="@string/botoncancelar"
        android:textColor="#000000"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="342dp"
        android:layout_marginEnd="183dp"
        android:layout_marginBottom="341dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="413dp"
        android:layout_height="43dp"
        android:background="#317378"
        android:text="Formativa"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="-2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>