<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Texto">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="51dp"
        app:layout_constraintBottom_toTopOf="@+id/edtexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/texto" />

    <EditText
        android:id="@+id/edtexto"
        android:layout_width="290dp"
        android:layout_height="85dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="319dp"
        android:layout_marginEnd="63dp"
        android:ems="10"
        android:fontFamily="@font/andika_new_basic"
        android:gravity="start|top"
        android:hint="@string/Texto"
        android:inputType="textMultiLine"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/chcursiva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="155dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="Texto"
        android:textColor="#1C856D"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/chnegrita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="422dp"
        android:layout_marginEnd="257dp"
        android:layout_marginBottom="261dp"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/Estilo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chcursiva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="211dp"
        android:layout_marginTop="422dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="261dp"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/Estilo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btntamaño"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="502dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="181dp"
        android:backgroundTint="#9C27B0"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/BotonAumentarTamaño"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btndisminuir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="211dp"
        android:layout_marginTop="502dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="181dp"
        android:backgroundTint="#9C27B0"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/BotonDisminuirTamaño"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateIds" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="413dp"
        android:layout_height="43dp"
        android:background="#317378"
        android:text="Formativa"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="-2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>