<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".HomePrincipal">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="155dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="Home"
        android:textColor="#1C856D"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/txtinfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/imagen" />

    <TextView
        android:id="@+id/txtinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="366dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/Informacion"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnmatematica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btntexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="574dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#3F51B5"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/botontexto"
        android:textColor="#000000"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnsalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnmatematica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="445dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#3F51B5"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/botonmatematica"
        android:textColor="#000000"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnfisica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnsalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="638dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="45dp"
        android:backgroundTint="#3F51B5"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/botonsalir"
        android:textColor="#000000"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnfisica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="509dp"
        android:layout_marginEnd="161dp"
        android:backgroundTint="#3F51B5"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/botonfisica"
        android:textColor="#000000"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btntexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="413dp"
        android:layout_height="43dp"
        android:background="#317378"
        android:text="Formativa"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>